--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
     <p>
       <form action="" name="custommessage">
         <div class="field">
-          <label class="label">Message:</label>
+          <label class="label">Message</label>
           <div class="control">
             <input class="input" type="text" name="message" id="message" placeholder="log message...">
           </div>
@@ -56,7 +56,7 @@
 
 
         <div class="field">
-          <label class="label">Message Log Level:</label>
+          <label class="label">Message Log Level</label>
           <div class="control">
             <div class="select">
               <select name="level">
@@ -71,7 +71,7 @@
         </div>
 
         <div class="field">
-          <label class="label">Logger Log Level:</label>
+          <label class="label">Logger Log Level</label>
           <div class="control">
             <div class="select">
               <select name="loglevel" onchange="setLogLevel(this.value)">
