--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,5 @@
-{# index page, providing a form to submit a city name #}
-{% extends "base.html" %}
-{% block title %}World of Logging{% endblock %}
-{% block content %}
+{# index page, providing a form to submit a city name #} {% extends "base.html" %} {% block title %}World of Logging{% endblock
+%} {% block content %}
 <script type="text/javascript">
   function logMessage() {
     var xhttp;
@@ -11,7 +9,8 @@
     xhttp.onreadystatechange = function () {
       if (xhttp.readyState == XMLHttpRequest.DONE) {
         var response = JSON.parse(xhttp.responseText);
-        document.getElementById("plogmessage").innerHTML = response.smsg;
+        document.getElementById("messageResult").style.display = "block";
+        document.getElementById("plogmessage").innerHTML = "Logged message: " + response.smsg;
         document.getElementById("message").value = '';
       }
     };
@@ -41,67 +40,60 @@
   Generate, Access and Analyze Application Logs
 </h1>
 
-<div class="columns">
-  <div class="column">
-    <h2 class="subtitle">Log new message</h2>
-    <p>
-      <form action="" name="custommessage">
-        <div class="field">
-          <label class="label">Message</label>
-          <div class="control">
-            <input class="input" type="text" name="message" id="message" placeholder="log message...">
-          </div>
+
+
+<h2 class="subtitle">Log new message</h2>
+<p>
+  <form action="" name="custommessage">
+    <div class="field">
+      <label class="label">Message</label>
+      <div class="control">
+        <input class="input" type="text" name="message" id="message" placeholder="log message...">
+      </div>
+    </div>
+
+
+
+    <div class="field">
+      <label class="label">Message Log Level</label>
+      <div class="control">
+        <div class="select">
+          <select name="level">
+            <option value="critical">critical</option>
+            <option value="error">error</option>
+            <option value="warn">warn</option>
+            <option value="info" selected="selected">info</option>
+            <option value="debug">debug</option>
+          </select>
         </div>
+      </div>
+    </div>
 
-
-
-        <div class="field">
-          <label class="label">Message Log Level</label>
-          <div class="control">
-            <div class="select">
-              <select name="level">
-                <option value="critical">critical</option>
-                <option value="error">error</option>
-                <option value="warn">warn</option>
-                <option value="info" selected="selected">info</option>
-                <option value="debug">debug</option>
-              </select>
-            </div>
-          </div>
+    <div class="field">
+      <label class="label">Logger Log Level</label>
+      <div class="control">
+        <div class="select">
+          <select name="loglevel" onchange="setLogLevel(this.value)">
+            <option value="critical">critical</option>
+            <option value="error">error</option>
+            <option value="warn" selected="selected">warn</option>
+            <option value="info">info</option>
+            <option value="debug">debug</option>
+          </select>
         </div>
+      </div>
+    </div>
 
-        <div class="field">
-          <label class="label">Logger Log Level</label>
-          <div class="control">
-            <div class="select">
-              <select name="loglevel" onchange="setLogLevel(this.value)">
-                <option value="critical">critical</option>
-                <option value="error">error</option>
-                <option value="warn" selected="selected">warn</option>
-                <option value="info">info</option>
-                <option value="debug">debug</option>
-              </select>
-            </div>
-          </div>
-        </div>
+    <div class="field">
+      <div class="control">
+        <input type="submit" class="button  is-link" type="submit" onclick="return logMessage()" value="Log Message">
+      </div>
+    </div>
+  </form>
 
-        <div class="field">
-          <div class="control">
-            <input type="submit" class="button  is-link" type="submit" onclick="return logMessage()" value="Log Message">
-          </div>
-        </div>
-      </form>
+</p>
+<br>
 
-    </p>
-  </div>
-  <div class="column" style="background-color: whitesmoke;">
-    <h2 class="subtitle">Logged messages</h2>
-    <pre id="plogmessage">...empty</pre>
-  </div>
-
+<div id = "messageResult" class = "container" style="display:none; background-color: whitesmoke;">
+  <pre id="plogmessage"></pre> {% endblock %}
 </div>
-
-
-
-
-{% endblock %}
