--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,107 +1,10 @@
 {# index page, providing a form to submit a city name #} 
 {% extends "base.html" %}
-{% block title %}World of Logging{% endblock %}
+{% block title %}World of Logging and Monitoring{% endblock %}
 {% block content %}
-<script type="text/javascript">
-  function logMessage() {
-    var xhttp;
-    var level = document.forms['custommessage'].elements['level'].value;
-    var message = document.forms['custommessage'].elements['message'].value;
-    var csrfmiddlewaretoken = document.forms['custommessage'].elements['csrfmiddlewaretoken'].value;
-    xhttp = new XMLHttpRequest();
-    xhttp.onreadystatechange = function () {
-      if (xhttp.readyState == XMLHttpRequest.DONE) {
-        var response = JSON.parse(xhttp.responseText);
-        document.getElementById("messageResult").style.display = "block";
-        document.getElementById("plogmessage").innerHTML = "Logged message: " + response.smsg;
-        document.getElementById("message").value = '';
-      }
-    };
-    xhttp.open('POST', "/logit");
-    xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-    var postVars = 'message=' + message + '&level=' + level + '&csrfmiddlewaretoken=' + csrfmiddlewaretoken;
-    xhttp.send(postVars);
-    return false;
-  }
-
-  function setLogLevel(newLevel) {
-    var xhttp;
-    var csrfmiddlewaretoken = document.forms['custommessage'].elements['csrfmiddlewaretoken'].value;
-    xhttp = new XMLHttpRequest();
-    xhttp.onreadystatechange = function () {
-      if (xhttp.readyState == XMLHttpRequest.DONE) {
-        document.getElementById("messageResult").style.display = "block";
-        document.getElementById("plogmessage").innerHTML = xhttp.responseText;
-      }
-    };
-    xhttp.open('POST', "/setLogLevel");
-    xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-    var postVars = 'loggerlevel=' + newLevel + '&csrfmiddlewaretoken=' + csrfmiddlewaretoken;
-    xhttp.send(postVars);
-    return false;
-  }
-</script>
-<h1 class="title">
-  Generate, Access and Analyze Application Logs
-</h1>
-<div class="container">
-<h2 class="subtitle">Log new message</h2>
-<p>
-  <form action="" name="custommessage">
-      {% csrf_token %}
-    <div class="field">
-      <label class="label">Message</label>
-      <div class="control">
-        <input class="input" type="text" name="message" id="message" placeholder="log message...">
-      </div>
-    </div>
-
-    <div class="field">
-      <label class="label">Message Log Level</label>
-      <div class="control">
-        <div class="select">
-          <select name="level">
-            <option value="critical">critical</option>
-            <option value="error">error</option>
-            <option value="warn">warn</option>
-            <option value="info" selected="selected">info</option>
-            <option value="debug">debug</option>
-          </select>
-        </div>
-      </div>
-    </div>
-
-    <div class="field">
-      <div class="control">
-        <input type="submit" class="button  is-link" type="submit" onclick="return logMessage()" value="Log Message">
-      </div>
-    </div>
-  </form>
-
-</p>
-<p>
-  <hr>
-  <h2 class="subtitle">Set Logger Log Level on Server</h2>
-  <div class="field">
-    <div class="control">
-      <div class="select">
-        <select name="loglevel" onchange="setLogLevel(this.value)">
-          <option value="critical">critical</option>
-          <option value="error">error</option>
-          <option value="warn" selected="selected">warn</option>
-          <option value="info">info</option>
-          <option value="debug">debug</option>
-        </select>
-      </div>
-    </div>
+<div class="jumbotron">
+    <h1 class="display-4">World of Logging and Monitoring!</h1>
+    <p class="lead">Click on Logging or Monitoring tab to get started</p>
+    <hr class="my-4">
   </div>
-
-</p>
-
-
-<div id = "messageResult" style="display:none;">
-  <hr>
-  <pre id="plogmessage"></pre> {% endblock %}
-</div>
-
-</div>
+{% endblock %}
