--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,10 +2,10 @@
     <a class="navbar-brand" href="/">WoLaM</a>
     <div id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item {{ logging_page }}">
+        <li class="nav-item {{ log_page }}">
           <a class="nav-link" href="{% url 'log' %}">Logging</a>
         </li>
-        <li class="nav-item {{ monitoring_page }}">
+        <li class="nav-item {{ monitor_page }}">
           <a class="nav-link" href="{% url 'monitor' %}">Monitoring</a>
         </li>
       </ul>
