--- a/app/templates/monitor.html
+++ b/app/templates/monitor.html
@@ -33,7 +33,7 @@
   <form action="" name="metric">
       {% csrf_token %}
     <div class="field">
-      <label class="label">Number of times to generate metrics (5 seconds delay between each loop)</label>
+      <label class="label">Number of times to generate a few random metrics (5 seconds delay between each loop)</label>
       <div class="control">
         <div class="select">
           <select name="metriccount">
