--- a/app/templates/monitor.html
+++ b/app/templates/monitor.html
@@ -7,6 +7,8 @@
     document.getElementById("metricmessage").innerHTML = "Running....";
     var xhttp;
     var metriccount = document.forms['metric'].elements['metriccount'].value;
+    var environment = document.forms['metric'].elements['environment'].value;
+    var region = document.forms['metric'].elements['region'].value;
     var csrfmiddlewaretoken = document.forms['metric'].elements['csrfmiddlewaretoken'].value;
     xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function () {
@@ -18,7 +20,7 @@
     };
     xhttp.open('POST', "/createMetrics");
     xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-    var postVars = 'metriccount=' + metriccount + '&csrfmiddlewaretoken=' + csrfmiddlewaretoken;
+    var postVars = 'metriccount=' + metriccount + '&environment=' + environment + '&region=' + region + '&csrfmiddlewaretoken=' + csrfmiddlewaretoken;
     xhttp.send(postVars);
     return false;
   }
@@ -28,10 +30,39 @@
   Generate Metrics
 </h1>
 <div class="container">
-<h2 class="subtitle">Create Prometheus metrics</h2>
+<h2 class="subtitle">Create Prometheus custom metrics</h2>
 <p>
   <form action="" name="metric">
-      {% csrf_token %}
+    {% csrf_token %}
+
+    <div class="field">
+      <label class="label">Environment</label>
+      <div class="control">
+        <div class="select">
+          <select name="environment">
+            <option value="development" selected="selected">Development</option>
+            <option value="staging">Staging</option>
+            <option value="production">Production</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="field">
+      <label class="label">Region</label>
+      <div class="control">
+        <div class="select">
+          <select name="region">
+            <option value="us-south">Dallas</option>
+            <option value="eu-fr">Frankfurt</option>
+            <option value="jp-tok">Japan</option>
+            <option value="eu-gb" selected="selected">London</option>
+            <option value="au-syd">Sydney</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
     <div class="field">
       <label class="label">Number of times to generate a few random metrics (5 seconds delay between each loop)</label>
       <div class="control">
