--- a/app/templates/monitor.html
+++ b/app/templates/monitor.html
@@ -64,15 +64,15 @@
     </div>
 
     <div class="field">
-      <label class="label">Number of times to generate a few random metrics (5 seconds delay between each loop)</label>
+      <label class="label">Number of times to generate a few random metrics (1 second delay between each loop)</label>
       <div class="control">
         <div class="select">
           <select name="metriccount">
-            <option value="5" selected="selected">5</option>
-            <option value="10">10</option>
-            <option value="15">15</option>
-            <option value="20">20</option>
-            <option value="25">25</option>
+            <option value="25" selected="selected">25</option>
+            <option value="50">50</option>
+            <option value="75">75</option>
+            <option value="100">100</option>
+            <option value="125">125</option>
           </select>
         </div>
       </div>
